Version 1.5.0
  Enhancements:
  - Add table option "sample_percent" to ANALYZE very large tables
    This can speed up ANALYZE significantly.
    Idea by PAscal Lemoy.
  - Introduce a table option "prefetch" for the Oracle row prefetch count.
    This can speed up foreign table scans.
    Per discussion with by PAscal Lemoy and Maurizio De Giorgi.

  Bugfixes:
  - Fix errors with now() and date/timestamp parameters in queries
    This bug was introduced in 1.3.0 and caused errors like
    ERROR:  error executing query: OCIDateTimeFromText failed to convert parameter
    DETAIL:  ORA-01843: not a valid month
    when now() or "current_timestamp" and friends or date/timestamp
    parameters were used.
    Report by Li Hailong.
  - Fix errors when updating date/timestamp columns
    This bug was also introduced in 1.3.0 and caused errors like
    ORA-01856: BC/B.C. or AD/A.D. required
    if the Oracle and PostgreSQL types were different.
    Report by Stephane Tachoires.
  - IMPORT FOREIGN SCHEMA sometimes didn't import primary keys
    Report by Jean-Marc Lessard, fix by PAscal Lemoy.
  - Fix memory leaks during ANALYZE
    This caused out of memory errors when large tables were analyzed.
    Report by Alessio Checcucci.
  - IMPORT FOREIGN SCHEMA should not tolerate missing remote schema
    It used to cause a warning, but the SQL standard requires an error.
    Report by Jean-Marc Lessard.
  - Fix crash when UPDATEing non-existent columns
    If a foreign table has more columns than the underlying Oracle table,
    these additional columns are treated as containing NULLs.
    However, oracle_fdw crashed on an attempt to change such a column with
    an UPDATE statement, which should not happen.
    Reported by Fabien Nicollet.
  - Fetch all columns from Oracle when the whole row is referenced
    This problem could lead to wrong NULL values in trigger functions or when
    the whole column is used in an expression.
    Reported by Fabien Nicollet.
